Fixing stupid image preload mistake

--- a/templates/wood.html
+++ b/templates/wood.html
@@ -13,7 +13,7 @@
 <link rel="canonical" href="https://homerevivellc.net/wood-flooring-installation">
 <link rel="alternate" href="https://homerevivellc.net/wood-flooring-installation" hreflang="en"/>
 <!-- Preload Images here -->
-<link rel="preload" href="{% static 'images/services/large/wood.webp' %}" as="image">
+<link rel="preload" href="{% static 'images/services/wood.webp' %}" as="image">
 {% endblock %}
 
 {% block title %}
