--- a/templates/remodel.html
+++ b/templates/remodel.html
@@ -13,7 +13,7 @@
 <link rel="canonical" href="https://homerevivellc.net/whole-home-remodel">
 <link rel="alternate" href="https://homerevivellc.net/whole-home-remodel" hreflang="en"/>
 <!-- Preload Images here -->
- <link rel="preload" href="{% static 'images/services/large/remodel.webp' %}" as="image">
+ <link rel="preload" href="{% static 'images/services/remodel.webp' %}" as="image">
 {% endblock %}
 
 {% block title %}
