--- a/templates/about.html
+++ b/templates/about.html
@@ -2,18 +2,18 @@
 {% load static %}
 
 {% block seo %} 
-<meta property="og:title" content="About Home Revive | Denver Remodel & repair experts"/>
+<meta property="og:title" content="Top Denver Home Remodels | Stunning Renovations by Home Revive"/>
 <meta property="og:url" content="https://homerevivellc.net/about"/>
 <meta property="og:image" content="{% static 'images/about/about-hero.webp' %}"/>
 <meta property=”og:image:width” content=”1200″/>
 <meta property=”og:image:height” content=”630″/>
-<meta property="og:description" content="Transform your home with top-quality remodeling & maintenance. Expert craftsmanship in Denver ensures lasting beauty and functionality. Get your free estimate today!"/>
+<meta property="og:description" content="Transform your Denver home with expert remodels! From kitchens to decks, Home Revive delivers stunning renovations built to last. Get your free consultation now!"/>
 <meta property="og:type" content="article">
-<meta name="description" content="Transform your home with top-quality remodeling & maintenance. Expert craftsmanship in Denver ensures lasting beauty and functionality. Get your free estimate today!">
+<meta name="description" content="Transform your Denver home with expert remodels! From kitchens to decks, Home Revive delivers stunning renovations built to last. Get your free consultation now!">
 <link rel="canonical" href="https://homerevivellc.net/about">
 <link rel="alternate" href="https://homerevivellc.net/about" hreflang="en"/>
 <!-- Preload Images here -->
- <link rel="preload" href="{% static 'images/about/about-hero.webp' %}" as="image">
+ <link rel="preload" href="{% static 'images/about/kitchen-remodel-in-denver-co.webp' %}" as="image">
  <link rel="preload" href="{% static 'images/about/consultation.webp' %}" as="image">
  <link rel="preload" href="{% static 'images/about/design.webp' %}" as="image">
  <link rel="preload" href="{% static 'images/about/estimate.webp' %}" as="image">
@@ -21,7 +21,7 @@
 {% endblock %}
 
 {% block title %}
-About Home Revive | Denver Remodel & repair experts
+Top Denver Home Remodels | Stunning Renovations by Home Revive
 {% endblock %}
 
 {% block about %} 
@@ -32,21 +32,24 @@ active-link
 <section class="about-hero">
     <div class="about-hero-info">
         <h1 class="title about-hero-title">
-            About Home Revive
+            Your Trusted Home Remodel Experts in Denver
         </h1>
         <p class="description about-hero-description">
-            We bring over 8 years of expertise to every project, whether it’s a full home remodel, a simple improvement, or specialized work like fence and deck repairs or installations. We take pride in transforming spaces, from interior and exterior painting to flawless flooring installation and even appliance repair. Our team is dedicated to quality craftsmanship, ensuring every detail is handled with care and precision. When it comes to making your home look and feel brand new, Home Revive is the name you can trust for reliable home renovation services.
+            We bring over 8 years of expertise to every project, whether it’s a full home remodel in Denver, a simple improvement, or specialized work like fence and deck repairs or installations. We take pride in transforming spaces, from interior and exterior painting to flawless flooring installation and even appliance repair. Our team is dedicated to quality craftsmanship, ensuring every detail is handled with care and precision. When it comes to making your home look and feel brand new, Home Revive is the name you can trust for reliable home renovation services in Denver.
         </p>
+        <div class="btn-area">
+            <a href="{% url 'contact' %}" class="secondary-btn btn">Get Your Free Estimate Today!</a>
+        </div>
     </div>
     <div class="about-hero-image background-image" title="Finished Kitchen"></div>
 </section>
 <section class="process">
     <div class="process-info">
         <h2 class="secondary-title process-title">
-            Our Process
+            Our Process for Denver Home Remodels
         </h2>
         <p class="description">
-            Our process begins with a free consultation where we come to you, listen to your ideas, and help shape your vision right in the space we’ll be working on. From there, we develop a detailed plan tailored to your needs and budget, keeping you informed every step of the way. Our skilled team then gets to work, using top-quality materials and craftsmanship to bring your project to life. Throughout the process, we’re committed to excellent customer service, ensuring your satisfaction at every phase. When we hand over the finished product, it’s not just a completed project—it’s your vision, expertly crafted with care and precision.
+            Our process begins with a free home renovation consultation in Denver where we come to you, listen to your ideas, and help shape your vision right in the space we’ll be working on. From there, we develop a detailed plan tailored to your needs and budget, keeping you informed every step of the way. Our skilled team then gets to work, using top-quality materials and craftsmanship to bring your project to life. Throughout the process, we’re committed to excellent customer service, ensuring your satisfaction at every phase. When we hand over the finished product, it’s not just a completed project—it’s your vision, expertly crafted with care and precision.
         </p>
     </div>
     <div class="process-list">
@@ -54,10 +57,10 @@ active-link
             <img src="{% static 'images/about/consultation.webp' %}" alt="Initial consultation to outline project needs" class="item-image">
             <div class="item-info">
                 <h3 class="item-title">
-                    On-Site Consultation
+                    Denver Remodeling Consultation
                 </h3>
                 <p class="description">
-                    The perfect way to discuss your vision in person and get expert advice tailored to your space. We’ll walk through the details together, ensuring we understand your needs and can provide the best solutions for your home improvement project.
+                    The perfect way to discuss your vision in person and get expert advice tailored to your space. We’ll walk through the details together, ensuring we understand your needs and can provide the best solutions for your Denver home improvement project.
                 </p>
             </div>
         </div>
@@ -65,10 +68,10 @@ active-link
             <img src="{% static 'images/about/design.webp' %}" alt="Construction blueprints for designing project" class="item-image">
             <div class="item-info">
                 <h3 class="item-title">
-                    Design & Estimate
+                    Detailed Design and Estimate
                 </h3>
                 <p class="description">
-                    We focus on understanding your goals and delivering a plan that aligns with your vision and budget. Our estimates are crafted with transparency, so you know exactly what to expect from start to finish. No surprises, just a clear path to your dream home.
+                    We focus on understanding your goals and delivering a plan that aligns with your vision and budget. Our estimates are crafted with transparency, so you know exactly what to expect from start to finish. No surprises—just a clear path to your dream home in Denver.
                 </p>
             </div>
         </div>
@@ -78,11 +81,10 @@ active-link
             <img src="{% static 'images/about/estimate.webp' %}" alt="Working hard on carpentry project" class="item-image">
             <div class="item-info">
                 <h3 class="item-title">
-                    Project Updates
+                    Ongoing Project Updates
                 </h3>
                 <p class="description">
-                    We keep you updated throughout the entire project and involved in the decision making process to make sure that we bring your vision to life. 
-                    This is your project, we are only here to bring it to life for you.
+                    We keep you updated throughout the entire project and involved in the decision-making process to make sure that we bring your vision to life. This is your project, and we’re here to create the perfect Denver remodel for you.
                 </p>
             </div>
         </div>
@@ -90,11 +92,10 @@ active-link
             <img src="{% static 'images/about/finish.webp' %}" alt="Putting the finishing touches on a project" class="item-image">
             <div class="item-info">
                 <h3 class="item-title">
-                    The Finishing Touches
+                    The Final Touches: Your Vision Brought to Life in Denver
                 </h3>
                 <p class="description">
-                    Our priority is ensuring every detail meets your expectations. 
-                    We don’t consider the job complete until you’re completely satisfied with the final result, because this is your vision and that's what matters most to us.
+                    Our priority is ensuring every detail meets your expectations. We don’t consider the job complete until you’re completely satisfied with the final result because your Denver home remodel is what matters most to us.
                 </p>
             </div>
         </div>
@@ -102,19 +103,22 @@ active-link
 </section>
 <section class="guarantee">
     <h2 class="secondary-title guarantee-title">
-        Our Quality Guarantee & Why It Matters For Your Home
+        Our Quality Guarantee for Denver Home Remodels & Why It Matters
     </h2>
     <p class="description guarantee-description">
-        Our commitment to quality begins with our dedication to using the best materials and proven techniques in every project we undertake. Whether we’re remodeling a kitchen, installing a new deck, or painting the exterior of your home, we source top-grade materials to ensure durability and a flawless finish. We believe that the foundation of any great project is the quality of the materials, so we never cut corners, ensuring your home improvements stand the test of time.
+        Our commitment to quality begins with our dedication to using the best materials and proven techniques in every project we undertake. Whether we’re remodeling a kitchen in Denver, installing a new deck, or painting the exterior of your home, we source top-grade materials to ensure durability and a flawless finish. We believe that the foundation of any great project is the quality of the materials, so we never cut corners, ensuring your home improvements stand the test of time.
     </p>
     <p class="description guarantee-description">
         Our team of experienced specialists brings meticulous attention to detail to every phase of your project. From the initial design and planning stages to the final touches, we work with precision and care to ensure everything is done right. We follow industry best practices and stay updated on the latest trends and techniques, allowing us to deliver results that not only meet but exceed your expectations. We understand that quality is in the details, so we take the time to get every aspect just right, ensuring your satisfaction.
     </p>
     <p class="description guarantee-description">
-        We’re not just committed to quality in our work; we’re committed to quality in our customer service as well. We maintain open communication with you throughout the project, providing regular updates and addressing any concerns you might have. Our goal is to make sure you’re completely satisfied with every step of the process, from the first consultation to the final walkthrough. We don’t consider the job done until you’re happy with the results because your satisfaction is the ultimate measure of our success.
+        We’re not just committed to quality in our work; we’re committed to providing exceptional customer service throughout your Denver home renovation. We maintain open communication with you throughout the project, providing regular updates and addressing any concerns you might have. Our goal is to make sure you’re completely satisfied with every step of the process, from the first consultation to the final walkthrough. We don’t consider the job done until you’re happy with the results because your satisfaction is the ultimate measure of our success.
     </p>
     <p class="description guarantee-description">
-        Choosing Home Revive means investing in the long-term value and comfort of your home. Our commitment to quality ensures that your remodeling and maintenance projects not only enhance the aesthetic appeal of your living spaces but also improve their functionality and durability. By using top-grade materials and adhering to the highest standards in home renovation, we help you avoid future costly repairs and ensure that every detail of your project is built to last. Whether you’re upgrading your kitchen, renovating your bathroom, or adding a new deck, you can trust that our focus on quality will give you a home that’s not just beautiful but also energy-efficient, safe, and built to withstand the test of time. With Home Revive, quality isn’t just a promise—it’s the foundation of everything we do, ensuring your home remains a source of pride and satisfaction for years to come.
+        Choosing Home Revive for your Denver remodel means investing in the long-term value and comfort of your home. Our commitment to quality ensures that your remodeling and maintenance projects not only enhance the aesthetic appeal of your living spaces but also improve their functionality and durability. By using top-grade materials and adhering to the highest standards in home renovation, we help you avoid future costly repairs and ensure that every detail of your project is built to last. 
+    </p>
+    <p class="description guarantee-description">
+        Whether you’re upgrading your kitchen, renovating your bathroom, or adding a new deck in Denver, you can trust that our focus on quality will give you a home that’s not just beautiful but also energy-efficient, safe, and built to withstand the test of time. With Home Revive, quality isn’t just a promise—it’s the foundation of everything we do, ensuring your home remains a source of pride and satisfaction for years to come.
     </p>
 </section>
 {% include 'last-call.html' %}
