--- a/templates/home.html
+++ b/templates/home.html
@@ -2,27 +2,27 @@
 {% load static %}
 
 {% block seo %} 
-<meta property="og:title" content="Home Remodel & Repair | Denver Colorado | Home Revive"/>
+<meta property="og:title" content="Top Home Remodels in Denver, CO | Transform Your Home Today!"/>
 <meta property="og:url" content="https://homerevivellc.net"/>
-<meta property="og:image" content="{% static 'images/home/hero.webp' %}"/>
+<meta property="og:image" content="{% static 'images/home/home-remodel-maintenance-in-denver-co.webp' %}"/>
 <meta property=”og:image:width” content=”1200″/>
 <meta property=”og:image:height” content=”630″/>
-<meta property="og:description" content="Top-rated home remodeling & maintenance in Denver. Expert services from kitchen remodels to HVAC. Get a free estimate & transform your home today!"/>
+<meta property="og:description" content="Transform your Denver home with top-rated remodels & energy-efficient upgrades. Get expert craftsmanship & a free estimate today. Click to learn more!"/>
 <meta property="og:type" content="website">
-<meta name="description" content="Top-rated home remodeling & maintenance in Denver. Expert services from kitchen remodels to HVAC. Get a free estimate & transform your home today!">
+<meta name="description" content="Transform your Denver home with top-rated remodels & energy-efficient upgrades. Get expert craftsmanship & a free estimate today. Click to learn more!">
 <link rel="canonical" href="https://homerevivellc.net">
 <link rel="alternate" href="https://homerevivellc.net" hreflang="en"/>
 <!-- Preload Images here -->
- <link rel="preload" href="{% static 'images/home/hero.webp' %}" as="image">
- <link rel="preload" href="{% static 'images/home/about-hero.webp' %}" as="image">
- <link rel="preload" href="{% static 'images/services/remodel.webp' %}" as="image">
- <link rel="preload" href="{% static 'images/services/deck.webp' %}" as="image">
- <link rel="preload" href="{% static 'images/services/appliance-repair.webp' %}" as="image">
+ <link rel="preload" href="{% static 'images/home/home-remodel-maintenance-in-denver-co.webp' %}" as="image">
+ <link rel="preload" href="{% static 'images/home/kitchen-remodel-in-denver-co.webp' %}" as="image">
+ <link rel="preload" href="{% static 'images/services/home-remodel-in-denver-co.webp' %}" as="image">
+ <link rel="preload" href="{% static 'images/services/deck-installation-repair-in-denver-co.webp' %}" as="image">
+ <link rel="preload" href="{% static 'images/services/appliance-repair-in-denver-co.webp' %}" as="image">
  <link rel="preload" href="{% static 'images/home/nextdoor.svg' %}" as="image">
 {% endblock %}
 
 {% block title %}
-Home Remodel & Repair | Denver Colorado | Home Revive
+Top Home Remodels in Denver, CO | Transform Your Home Today!
 {% endblock %}
 
 {% block home %} 
@@ -32,29 +32,29 @@ active-link
 {% block main %}
 <section class="hero background-image" title="Denver Skyline">
     <h1 class="title hero-title">
-        Exceptional Home Remodeling & Maintenance in Denver, CO
+        Exceptional Home Remodel & Maintenance in Denver, CO
     </h1>
     <div class="btn-area">
-        <a href="{% url 'contact' %}" class="btn">Request Your Free Estimate Today</a>
+        <a href="{% url 'contact' %}" class="btn">Get Your Free Estimate Today!</a>
     </div>
 </section>
 <section class="home-about">
     <div class="home-about-info">
         <h2 class="home-about-title">
-            Best Home Maintenance and Remodeling Company in Denver, CO
+            Top-Rated Home Remodel and Maintenance Company in Denver, CO
         </h2>
         <p class="description home-about-description">
-            We take pride in being Denver's top choice for home remodeling and maintenance. With years of hands-on experience, we know what it takes to keep your home in perfect condition, whether it's tackling those tricky plumbing issues, keeping your HVAC system running smoothly, or fixing any broken appliances. We don't just fix problems; we prevent them, saving you time, money, and stress in the long run. Our team is committed to providing reliable, high-quality service that ensures your home stays safe, comfortable, and efficient. When it comes to home maintenance and remodeling, we're the experts Denver homeowners trust.
+            We take pride in being Denver's top choice for residential home remodels, renovations, and home maintenance. With years of hands-on experience, we know what it takes to keep your home in perfect condition, whether it's tackling those tricky plumbing upgrades, keeping your HVAC systems running smoothly, or fixing any appliance issues. We don’t just fix problems; we prevent them, saving you time, money, and stress in the long run. Our team is committed to providing Denver homeowners with reliable, high-quality service that ensures your home stays safe, comfortable, and energy-efficient. When it comes to home remodels and property maintenance in Denver, we're the experts homeowners trust.
         </p>
         <div class="btn-area">
-            <a href="{% url 'about' %}" class="secondary-btn btn">Learn More About Our Services</a>
+            <a href="{% url 'about' %}" class="secondary-btn btn">Learn More About Our Comprehensive Home Remodeling Services</a>
         </div>
     </div>
     <div class="home-about-image background-image" title="New modern kitchen blue gray"></div>
 </section>
 <section class="why-us">
     <h2 class="secondary-title why-title">
-        Why Choose Us
+        Why Choose Us For Your Home Renovation in Denver?
     </h2>
     <div class="reasons-list">
         <div class="reason">
@@ -71,7 +71,7 @@ active-link
                 Free, In-Home Consultations
             </h3>
             <p class="description">
-                Whether it’s a kitchen remodel, a bathroom upgrade, or a new deck installation, we’ll walk through the details with you and figure out the best plan to bring your ideas to life.
+                Whether it’s a kitchen remodel, bathroom renovation, or a deck installation, we’ll walk through the details with you and figure out the best plan to bring your ideas to life.
             </p>
         </div>
         <div class="reason">
@@ -87,8 +87,7 @@ active-link
                 Licensed & Insured
             </h3>
             <p class="description">
-                Rest assured knowing that your home is in safe, professional hands. 
-                Every project we take on is covered and protected completely
+                Rest assured knowing that your home is in safe, professional hands. Every project we take on is fully licensed and insured for home remodeling and residential services in Denver.
             </p>
         </div>
     </div>
@@ -98,11 +97,14 @@ active-link
         </h2>
         <div class="cta-content">
             <p class="description cta-description">
-                When you choose Home Revive for your home remodeling and maintenance needs in Denver, you're not just hiring a contractor – you're partnering with a team dedicated to enhancing the value, comfort, and efficiency of your home. Our expert services go beyond just fixing what's broken; we focus on delivering long-lasting solutions that improve your quality of life. From upgrading your kitchen to the latest designs, remodeling your bathroom for modern comfort, or ensuring your HVAC system is ready for all seasons, we tailor our services to meet your specific needs.
+                When you choose Home Revive for your home remodeling needs in Denver, you're not just hiring a contractor – you're partnering with a team dedicated to enhancing the value, comfort, and energy efficiency of your home. Our expert services go beyond just fixing what's broken; we focus on delivering long-lasting solutions that improve your quality of life. From kitchen renovations with the latest designs, bathroom remodeling, or ensuring your HVAC system is ready for all seasons, we tailor our services to meet your specific needs.
             </p>
             <p class="description cta-description">
-                Enjoy peace of mind knowing that your home is being cared for by professionals who are as invested in its upkeep as you are. Let us help you create a home that's not only beautiful but also functional and efficient, saving you time and reducing energy costs. Choose Home Revive – where quality remodeling meets dependable maintenance.
+                We take pride in our work, using the best materials and paying attention to every detail. When we're on the job, you can relax knowing your home is in skilled, reliable hands. Whether it's a kitchen remodel, basement finishing, or whole home renovation, our craftsmanship stands out. Enjoy peace of mind knowing that your home is being cared for by professionals who are as invested in its upkeep as you are. Let us help you create a home that's not only beautiful but also functional and efficient, saving you time and reducing energy costs. Choose Home Revive – where quality remodeling meets dependable home maintenance services.
             </p>
+        </div>
+        <div class="btn-area">
+            <a href="{% url 'contact' %}" class="secondary-btn btn">Get Your Free Estimate Today!</a>
         </div>
     </div>
 </section>
@@ -111,18 +113,34 @@ active-link
         Our Services Include
     </h2>
     <div class="home-services-list">
-        <div class="home-service remodel background-image" title="Home remodel service">
-            <a href="" class="home-service-link">Home Remodels</a>
+        <div class="home-service remodel background-image">
+            <a href="{% url 'remodel' %}" class="home-service-link">Home Remodels</a>
         </div>
-        <div class="home-service deck background-image" title="Deck repair and install service">
-            <a href="" class="home-service-link">Deck Repair/Install</a>
+        <div class="home-service deck background-image">
+            <a href="{% url 'deck' %}" class="home-service-link">Deck Repair/Install</a>
         </div>
-        <div class="home-service appliance-repair background-image" title="Appliance repair service">
-            <a href="" class="home-service-link">Appliance Repair</a>
+        <div class="home-service appliance-repair background-image">
+            <a href="{% url 'appliance-repair' %}" class="home-service-link">Appliance Repair</a>
         </div>
     </div>
     <div class="home-services-btn-area btn-area">
-        <a href="{% url 'services' %}" class="secondary-btn btn">Explore All Our Services</a>
+        <a href="{% url 'services' %}" class="secondary-btn btn">Explore All Our Comprehensive Home Remodel Services</a>
+    </div>
+    <div class="cta">
+        <h2 class="cta-title secondary-title">
+            Why Invest in a Home Remodel in Denver, CO?
+        </h2>
+        <div class="cta-content">
+            <p class="description cta-description">
+                Upgrading your home with a professional home remodel is one of the best decisions you can make as a homeowner in Denver. Not only does it increase the property value of your house, but it also enhances your everyday living experience. Whether you’re looking to create more functional spaces with a kitchen renovation, update the style with a bathroom remodel, or add square footage with a basement finishing, our team delivers results that blend beauty with practicality.
+            </p>
+            <p class="description cta-description">
+                Choosing Home Revive for your Denver home remodel means investing in energy-efficient upgrades, modern designs, and long-term savings on utility bills. Our expert craftsmen specialize in creating personalized spaces that cater to your family’s unique needs, while also keeping your home aligned with the latest trends in home improvement. From luxury bathroom remodels to custom kitchen designs, we ensure that every project not only looks stunning but also improves your home’s functionality and energy efficiency.
+            </p>
+        </div>
+    </div>
+    <div class="btn-area">
+        <a href="{% url 'contact' %}" class="secondary-btn btn">Get Your Free Estimate Today!</a>
     </div>
 </section>
 <!-- <section class="testimonial-section">
