Fixing image preload mistakes

--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,7 @@
 {% block seo %} 
 <meta property="og:title" content="Top Denver Home Remodels | Stunning Renovations by Home Revive"/>
 <meta property="og:url" content="https://homerevivellc.net/about"/>
-<meta property="og:image" content="{% static 'images/about/about-hero.webp' %}"/>
+<meta property="og:image" content="{% static 'images/about/kitchen-remodel-in-denver-co.webp' %}"/>
 <meta property=”og:image:width” content=”1200″/>
 <meta property=”og:image:height” content=”630″/>
 <meta property="og:description" content="Transform your Denver home with expert remodels! From kitchens to decks, Home Revive delivers stunning renovations built to last. Get your free consultation now!"/>
